matches scoring today & layout

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -2,7 +2,7 @@
 @import '../variables.css';
 
 @import './AppDefaults.css';
-@import './Match.css';
+@import './Match.scss';
 @import './Intro.css';
 
 @import '../../../node_modules/font-awesome-animation/dist/font-awesome-animation.min.css';
