--- a/src/components/App/Match.scss
+++ b/src/components/App/Match.scss
@@ -6,7 +6,7 @@
   text-align: center;
   overflow: hidden;
   white-space: nowrap;
-  color: var(--strike-color);;
+  color: var(--strike-color);
 }
 .strike > span {
   position: relative;
@@ -87,7 +87,7 @@
 
 .match-card {
   overflow: visible;
-  padding-bottom: 18px;
+  // padding-bottom: 18px;
   color: rgba(0, 0, 0, 0.87);
   background-color: rgb(250, 250, 250);
   transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
@@ -111,17 +111,7 @@
   padding: 0;
 }
 
-.match-card-header {
-  padding: 15px;
-  font-weight: bold;
-}
 
-.match-card-header-subtitle {
-  color: rgba(0, 0, 0, 0.54);
-  display: block;
-  font-size: 14px;
-  margin-top: 4px;
-}
 
 .match-card-body {
   padding: 15px 15px 15px;
@@ -149,17 +139,109 @@
   padding-left: 24px;
 }
 
-.match-card-score {
-  margin-right: 7px;
-  font-size: 16px;
-  margin-left: 12px;
-  float: right;
-  padding: 10px 14px;
-  color: black;
+
+.match-card-header-subtitle {
+  color: rgba(0, 0, 0, 0.54);
+  display: block;
+  font-size: 14px;
+  margin-top: 4px;
 }
 
-.match-card-score-inline {
-  margin-top: 15px;
+.match-card-header {
+  display: flex;
+  padding: 15px;
+  font-weight: bold;
+
+  >a {
+    .badge {
+      font-size: 16px;
+      color: black;
+      padding: 10px 14px;
+    }
+  }
+
+  >span.score-as-badge {
+    font-size: 16px;
+    color: black;
+    padding: 10px 14px;
+    height: 36px;
+  }
+
+  >span:not(.score-as-badge) {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+
+    &.big {
+      gap: 10px;
+    }
+
+    >.badge {
+      font-size: 16px;
+      align-self: flex-start;
+      padding-left: 12px;
+      padding-right: 12px;
+    }
+
+    .match-title {
+      font-size: 34px;
+      flex: 1;
+      align-items: center;
+      display: flex;
+    }
+  }
+
+  .match-card-score {
+    flex: 0 0 180px;
+
+    &.big {
+      flex: 0 0 280px;
+    }
+  }
+
+  // .match-card-score {
+  //   margin-right: 7px;
+  //   font-size: 16px;
+  //   margin-left: 12px;
+  //   float: right;
+  //   padding: 10px 14px;
+  //   color: black;
+  // }
+
+  .match-card-score-inline {
+    margin-top: 15px;
+  }
+}
+
+.match-manipulator {
+  display: flex;
+  height: 100%;
+  align-items: center;
+
+  &.big {
+    gap: 10px;
+  }
+
+  .score {
+    flex: 1;
+
+    >span {
+      width: 100%;
+    }
+  }
+
+  .manipulators {
+    color: #d3d3d3;
+    flex: 0 0 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    >i {
+      margin: 5px 0;
+    }
+  }
 }
 
 
@@ -171,10 +253,6 @@
   padding-left: 7px;
 }
 
-
-.match-card-panel .panel-group {
-  /*margin-bottom: -10px;*/
-}
 
 .match-card-panel .panel-collapse > .panel-body {
   padding: 0px;
