bugfix: matches table: see what the players have selected

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,3 +12,15 @@
   margin-left: 0 !important;
   margin-right: 0 !important;
 }
+
+.td-success {
+  background-color: #d1e8de !important;
+}
+
+.td-danger {
+  background-color: #f7d7da !important;
+}
+
+.td-info {
+  background-color: #cff4fc !important;
+}
