--- a/src/components/App/AppDefaults.css
+++ b/src/components/App/AppDefaults.css
@@ -10,6 +10,10 @@ html, body {
   line-height: 1.375; /* ~22px */
 }
 
+html {
+  overflow-y: scroll;
+}
+
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
